--- a/Planetary.Application/Planetary.Application.csproj
+++ b/Planetary.Application/Planetary.Application.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Interfaces\" />
+    <Folder Include="Command\" />
+    <Folder Include="Query\" />
   </ItemGroup>
 
 </Project>
