--- a/Planetary/Planetary.WebApi/Planetary.WebApi.csproj
+++ b/Planetary/Planetary.WebApi/Planetary.WebApi.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\..\Planetary.Infrastructure\Planetary.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
