--- a/Planetary/Planetary.WebApi/appsettings.Development.json
+++ b/Planetary/Planetary.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost,7433;Initial Catalog=Planetary;User ID=sa;Password=Aa123456;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=host.docker.internal,7433;Initial Catalog=Planetary;User ID=sa;Password=Aa123456;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Database": {
     "EnableSensitiveDataLogging": true
